--- a/roles/openshift_docker/tasks/main.yml
+++ b/roles/openshift_docker/tasks/main.yml
@@ -1,20 +1,27 @@
 ---
 - name: Set docker facts
   openshift_facts:
-    role: "{{ item.role }}"
-    local_facts: "{{ item.local_facts }}"
-  with_items:
-  - role: common
-    local_facts:
-      deployment_type: "{{ openshift_deployment_type }}"
-      docker_additional_registries: "{{ docker_additional_registries }}"
-      docker_insecure_registries: "{{ docker_insecure_registries }}"
-      docker_blocked_registries: "{{ docker_blocked_registries }}"
-  - role: node
+    role: docker
     local_facts:
       portal_net: "{{ openshift_master_portal_net | default(None) }}"
-      docker_log_driver:  "{{ lookup( 'oo_option' , 'docker_log_driver'  )  | default('',True) }}"
-      docker_log_options: "{{ lookup( 'oo_option' , 'docker_log_options' )  | default('',True) }}"
+      log_driver:  "{{ openshift_docker_log_driver
+                       | default(lookup('oo_option' , 'docker_log_driver')
+                                 | default(None ,True)) }}"
+      log_options: "{{ openshift_docker_log_options
+                       | default(lookup('oo_option' , 'docker_log_options')
+                                 | default(None, True)) }}"
+      extra_options: "{{ openshift_docker_extra_options
+                         | default(lookup('oo_option', 'docker_extra_options')
+                                   | default(None, True)) }}"
+      additional_registries: "{{ openshift_docker_additional_registries
+                                 | default(lookup('oo_option', 'docker_additional_registries')
+                                           | default(None, True)) }}"
+      insecure_registries: "{{ openshift_docker_insecure_registries
+                               | default(lookup('oo_option', 'docker_insecure_registries')
+                                         | default(None, True)) }}"
+      blocked_registries: "{{ openshift_docker_blocked_registries
+                              | default(lookup('oo_option', 'docker_blocked_registries')
+                                        | default(None, True)) }}"
 
 - stat: path=/etc/sysconfig/docker
   register: docker_check
@@ -24,16 +31,19 @@
     dest: /etc/sysconfig/docker
     regexp: '^{{ item.reg_conf_var }}=.*$'
     line: "{{ item.reg_conf_var }}='{{ item.reg_fact_val | oo_prepend_strings_in_list(item.reg_flag ~ ' ') | join(' ') }}'"
-  when: "'docker_additional_registries' in openshift.common and docker_check.stat.isreg"
+  when: item.reg_fact_key in openshift.docker and docker_check.stat.isreg
   with_items:
   - reg_conf_var: ADD_REGISTRY
-    reg_fact_val: "{{ openshift.common.docker_additional_registries }}"
+    reg_fact_key: additional_registries
+    reg_fact_val: "{{ openshift.docker.additional_registries }}"
     reg_flag: --add-registry
   - reg_conf_var: BLOCK_REGISTRY
-    reg_fact_val: "{{ openshift.common.docker_blocked_registries }}"
+    reg_fact_key: blocked_registries
+    reg_fact_val: "{{ openshift.docker.blocked_registries }}"
     reg_flag: --block-registry
   - reg_conf_var: INSECURE_REGISTRY
-    reg_fact_val: "{{ openshift.common.docker_insecure_registries }}"
+    reg_fact_key: insecure_registries
+    reg_fact_val: "{{ openshift.docker.insecure_registries }}"
     reg_flag: --insecure-registry
   notify:
   - restart openshift_docker
@@ -44,10 +54,7 @@
   lineinfile:
     dest: /etc/sysconfig/docker
     regexp: '^OPTIONS=.*$'
-    line: "OPTIONS='--insecure-registry={{ openshift.node.portal_net }} \
-      {% if ansible_selinux and ansible_selinux.status == '''enabled''' %}--selinux-enabled{% endif %} \
-      {% if openshift.node.docker_log_driver is defined  %} --log-driver {{ openshift.node.docker_log_driver }}  {% endif %} \
-      {% if openshift.node.docker_log_options is defined %}   {{ openshift.node.docker_log_options |  oo_split() | oo_prepend_strings_in_list('--log-opt ') | join(' ')}}  {% endif %} '"
+    line: "OPTIONS='{{ docker_opts }}'"
   when: docker_check.stat.isreg
   notify:
     - restart openshift_docker
