--- a/roles/etcd/tasks/main.yml
+++ b/roles/etcd/tasks/main.yml
@@ -38,7 +38,7 @@
 
 - name: Reload systemd units
   command: systemctl daemon-reload
-  when: openshift.common.is_containerized and ( install_etcd_result | changed )
+  when: openshift.common.is_containerized | bool and ( install_etcd_result | changed )
 
 - name: Validate permissions on the config dir
   file:
