Install cockpit, logrotate and fluentd unless host is atomic.

--- a/playbooks/common/openshift-etcd/config.yml
+++ b/playbooks/common/openshift-etcd/config.yml
@@ -89,7 +89,7 @@
   roles:
   - etcd
   - role: nickhammond.logrotate
-    when: not openshift.common.is_containerized | bool
+    when: not openshift.common.is_atomic | bool
 
 - name: Delete temporary directory on localhost
   hosts: localhost
