--- a/playbooks/openstack/openshift-cluster/config.yml
+++ b/playbooks/openstack/openshift-cluster/config.yml
@@ -13,3 +13,4 @@
     openshift_hostname: "{{ ansible_default_ipv4.address }}"
     openshift_router_selector: 'type=infra'
     openshift_infra_nodes: "{{ g_infra_hosts }}"
+    openshift_master_cluster_method: 'native'
