--- a/playbooks/aws/openshift-cluster/config.yml
+++ b/playbooks/aws/openshift-cluster/config.yml
@@ -1,4 +1,3 @@
----
 - include: ../../common/openshift-cluster/config.yml
   vars_files:
   - ../../aws/openshift-cluster/vars.yml
@@ -14,3 +13,4 @@
     openshift_public_hostname: "{{ ec2_ip_address }}"
     openshift_router_selector: 'type=infra'
     openshift_infra_nodes: "{{ g_infra_hosts }}"
+    openshift_node_labels: '{"region": "{{ ec2_region }}", "type": "{{ hostvars[inventory_hostname]["ec2_tag_sub-host-type"] if inventory_hostname in groups["tag_host-type_node"] else hostvars[inventory_hostname]["ec2_tag_host-type"] }}"}'
