--- a/roles/openshift_storage_nfs/tasks/main.yml
+++ b/roles/openshift_storage_nfs/tasks/main.yml
@@ -7,20 +7,13 @@
 - name: Configure NFS
   lineinfile:
     dest: /etc/sysconfig/nfs
-    regexp: "{{ item.regex }}"
-    line: "{{ item.line }}"
-  register: nfs_config
-  with_items:
-  - regex: '^RPCNFSDARGS=.*$'
+    regexp: '^RPCNFSDARGS=.*$'
     line: 'RPCNFSDARGS="-N 2 -N 3"'
-  - regex: '^RPCMOUNTDOPTS=.*$'
-    line: 'RPCMOUNTDOPTS="-p 20048"'
-  - regex: '^STATDARG=.*$'
-    line: 'STATDARG="-p 50825"'
+  register: nfs_config
 
 - name: Restart nfs-config
   service: name=nfs-config state=restarted
-  when: "True in (nfs_config.results | oo_collect(attribute='changed') | list)"
+  when: nfs_config | changed
 
 - name: Ensure exports directory exists
   file:
