Nodes resolve cluster.local via dnsmasq

--- a/playbooks/adhoc/uninstall.yml
+++ b/playbooks/adhoc/uninstall.yml
@@ -162,6 +162,8 @@
       file: path={{ item }} state=absent
       with_items:
         - "~{{ ansible_ssh_user }}/.kube"
+        - /etc/NetworkManager/conf.d/origin-cluster-resolver.conf
+        - /etc/NetworkManager/dnsmasq.d/origin-dns.conf
         - /etc/ansible/facts.d/openshift.fact
         - /etc/atomic-enterprise
         - /etc/corosync
@@ -212,6 +214,9 @@
     # systemd configuration manager
     - name: Reload systemd manager configuration
       command: systemctl daemon-reload
+      
+    - name: Restart NetworkManager to revert cluster dns
+      service: name=NetworkManager state=restarted
 
 - hosts: nodes
   sudo: yes
