added nodes not ready and nodes not schedulable triggers

--- a/roles/os_zabbix/vars/template_openshift_master.yml
+++ b/roles/os_zabbix/vars/template_openshift_master.yml
@@ -374,17 +374,17 @@ g_template_openshift_master:
     priority: high
 
   - name: 'Hosts not ready according to {HOST.NAME}'
-    expression: '{Template Openshift Master:openshift.master.nodesnotready.count.last(#2)>0'
+    expression: '{Template Openshift Master:openshift.master.nodesnotready.count.last(#2)}>0'
     url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/openshift_node.asciidoc'
     dependencies: 
-    - 'Openshift Master procecss not running on {HOST.NAME}'
+    - 'Openshift Master process not running on {HOST.NAME}'
     priority: high
 
   - name: 'Hosts not schedulable according to {HOST.NAME}'
-    expression: '{Template Openshift Master:openshift.master.nodesnotschedulable.count.last(#2)>0'
+    expression: '{Template Openshift Master:openshift.master.nodesnotschedulable.count.last(#2)}>0'
     url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/openshift_node.asciidoc'
     dependencies: 
-    - 'Openshift Master procecss not running on {HOST.NAME}'
+    - 'Openshift Master process not running on {HOST.NAME}'
     priority: info
 
   zgraphs:
